@@ -1,3 +1,8 @@
+- internal
+  o computeGroupSize: do direct requires before choices
+    (eg for epiphany: require libmozilla-firefox2.0.0.6 before choosing
+    package providing libmozjs.so)
+
 Version 10.4.165 - 10 August 2007, by Thierry Vignaud
 
 - fix detecting sound cards
